--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    // 阻止 元素隐式具有 "any" 类型，因为类型为 "string" 的表达式不能用于索引类型 "{}" 错误
+    "suppressImplicitAnyIndexErrors": true,
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
